--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -6,7 +6,7 @@ db.password=root
 #Hibernate Configuration:
 db.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 db.hibernate.show_sql=true
-db.entitymanager.packages.to.scan=com.github.mikhalechko.webchat.entity
+db.entitymanager.packages.to.scan=com.github.mykhalechko.webchat.entity
 db.hibernate.hbm2ddl.auto=create
 #reg.login="login"
 #reg.name="name"
