--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -8,11 +8,6 @@ db.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 db.hibernate.show_sql=true
 db.entitymanager.packages.to.scan=com.github.mykhalechko.webchat.entity
 db.hibernate.hbm2ddl.auto=create
-#reg.login="login"
-#reg.name="name"
-#reg.password="password"
-#reg.address="address"
-#reg.submit="submit"
-#NotEmpty.userForm.name = Name is required!
-#NotEmpty.userForm.login = Login is required!
-#NotEmpty.userForm.password = Password is required!
+NotEmpty.userForm.name=Name is required!
+NotEmpty.userForm.login=Login is required!
+NotEmpty.userForm.password=Password is required!
