--- a/src/main/resources/reg.properties
+++ b/src/main/resources/reg.properties
@@ -1,5 +1,5 @@
-reg.login="login"
-reg.name="name"
-reg.password="password"
-reg.address="address"
-reg.submit="submit"
+reg.login=login
+reg.name=name
+reg.password=password
+reg.address=address
+reg.submit=submit
