--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -4,7 +4,7 @@ db.url=jdbc:postgresql://localhost/webchat
 db.username=postgres
 db.password=root
 #Hibernate Configuration:
-db.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+db.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 db.hibernate.show_sql=true
 db.entitymanager.packages.to.scan=com.github.mykhalechko.webchat.entity
 db.hibernate.hbm2ddl.auto=create
