use app.properties in DataConfig.java

--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -3,11 +3,16 @@ db.driver=org.postgresql.Driver
 db.url=jdbc:postgresql://localhost/webchat
 db.username=postgres
 db.password=root
+db.test=test
 #Hibernate Configuration:
 db.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 db.hibernate.show_sql=true
+db.hibernate.hbm2ddl.auto=update
+db.hibernate.connection.CharSet=utf8
+db.hibernate.connection.characterEncoding=utf8
+db.hibernate.connection.useUnicode=true
+#EntityManager Configuration:
 db.entitymanager.packages.to.scan=com.github.mykhalechko.webchat.entity
-db.hibernate.hbm2ddl.auto=create
 NotEmpty.userForm.name=Name is required!
 NotEmpty.userForm.login=Login is required!
 NotEmpty.userForm.password=Password is required!
