--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,12 @@
             <version>9.4.1211</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.hateoas</groupId>
+            <artifactId>spring-hateoas</artifactId>
+            <version>0.21.0.RELEASE</version>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>WebChat</finalName>
