--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>mykhalechko</groupId>
+    <groupId>com.github.mykhalechko.webchat</groupId>
     <artifactId>WebChat</artifactId>
     <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
@@ -111,6 +111,7 @@
     </dependencies>
     <build>
         <finalName>WebChat</finalName>
+
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
