--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,8 +1,8 @@
 #DB properties:
 db.driver=org.postgresql.Driver
-db.url=jdbc:postgresql://localhost/webchat
-db.username=postgres
-db.password=12345
+db.url=jdbc:postgresql://$OPENSHIFT_POSTGRESQL_DB_HOST:$OPENSHIFT_POSTGRESQL_DB_PORT/jbosswildfly
+db.username=adminysvr7nm
+db.password=gr-iF2Sg4bEG
 db.test=test
 #Hibernate Configuration:
 db.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
