--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -2,8 +2,7 @@
 db.driver=org.postgresql.Driver
 db.url=jdbc:postgresql://localhost/webchat
 db.username=postgres
-db.password=12345
-db.test=test
+db.password=root
 #Hibernate Configuration:
 db.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 db.hibernate.show_sql=true
