--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -15,3 +15,4 @@ db.entitymanager.packages.to.scan=com.github.mykhalechko.webchat.entity
 NotEmpty.userForm.name=Name is required!
 NotEmpty.userForm.login=Login is required!
 NotEmpty.userForm.password=Password is required!
+socket.url=/app
