--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,12 @@
             <version>0.21.0.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>WebChat</finalName>
