--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -16,3 +16,4 @@ NotEmpty.userForm.name=Name is required!
 NotEmpty.userForm.login=Login is required!
 NotEmpty.userForm.password=Password is required!
 socket.url=/app
+redis.url=localhost
