--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <url>http://maven.apache.org</url>
 
     <properties>
+        <failOnMissingWebXml>false</failOnMissingWebXml>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring-framework-version>4.3.3.RELEASE</spring-framework-version>
