--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,19 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+
+            <!-- Tomcat plugin -->
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <url>http://localhost:8080/manager/text</url>
+                    <server>TomcatServer</server>
+                    <username>admin</username>
+                    <password>password</password>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
